game redirect on init page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,11 +10,10 @@
 
 <form action="/hello" method="GET" id="nameForm">
     <div>
-        <label for="nameField">How should the app call you?</label>
+        <label for="nameField">Enter game Id</label>
         <input name="myName" id="nameField">
-        <button>Greet me!</button>
-        <p id="demo">A Paragraph</p>
-        <button type="button" onclick="myFunction()">Try it</button>
+        <button type="button" onclick="joinGame()">joinGame</button><br /><br />
+        <button type="button" onclick="myFunction()">Create New Game</button>
     </div>
 </form>
 </body>
